@@ -68,7 +68,7 @@ kadm_copyout_int32(outint, cp)
 /*
  * krb5_free_adm_data()	- Free data blocks allocated by read_adm... routines.
  */
-void INTERFACE
+void KRB5_CALLCONV
 krb5_free_adm_data(kcontext, ncomp, datap)
     krb5_context	kcontext;
     krb5_int32		ncomp;
@@ -96,7 +96,7 @@ krb5_free_adm_data(kcontext, ncomp, datap)
  *		.
  *		.
  */
-krb5_error_code INTERFACE
+krb5_error_code KRB5_CALLCONV
 krb5_send_adm_cmd(kcontext, sock, ctx, nargs, arglist)
     krb5_context	kcontext;	/* Context handle	(In ) */
     krb5_pointer	sock;		/* Socket to write to	(In ) */
@@ -412,7 +412,7 @@ krb5_read_adm_cmd(kcontext, sock, ctx, nargs, arglist)
  * It is the caller's responsibility to free the memory allocated for
  * the read in component list.
  */
-krb5_error_code INTERFACE
+krb5_error_code KRB5_CALLCONV
 krb5_read_adm_reply(kcontext, sock, ctx, cmd_stat, ncomps, complist)
     krb5_context	kcontext;	/* Context handle	(In ) */
     krb5_pointer	sock;		/* Socket to read from	(In ) */
